// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked on android 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityTraits="button"
  disabled={false}
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Translation
        passThrough="Checked"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#00a991"
        fontSize={26}
        name="circle"
        style={Object {}}
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`checked on ios 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityTraits="button"
  disabled={false}
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Translation
        passThrough="Checked"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#00a991"
        fontSize={26}
        name="check-circle"
        style={Object {}}
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`renders 1`] = `
<TouchableWithoutFeedback
  accessibilityComponentType="button"
  accessibilityTraits="button"
  disabled={false}
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Translation
        passThrough="Unchecked"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#bac7d5",
            "borderRadius": 100,
            "borderWidth": 1,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;
